--- a/css/template.css
+++ b/css/template.css
@@ -214,18 +214,150 @@
 .rounded-p .btn {
   border-radius: 50px ; 
 }
-.social_links {
-  text-align: center;
-  margin: 1em auto;
-  margin-bottom: -1.3em; }
-  .social_links .link {
+  .rows .linked {
     display: inline-block;
-    font-size: 2em;
+    font-size:xx-large;
     padding: 0.3em 0.8em;
     margin: 0;
     width: 21.333%;
     text-align: center; }
-.messengers {
+/*.messengers {
   clear: both; }
   .messengers.links-num-3 .link, .messengers.links-num-4 .link, .messengers.links-num-5 .link, .messengers.links-num-6 .link, .messengers.links-num-7 .link, .messengers.links-num-8 .link, .messengers.links-num-9 .link, .messengers.links-num-10 .link, .messengers.links-num-11 .link, .messengers.links-num-12 .link {
-    max-width: 32.33333%; }
+    max-width: 32.33333%; }*/
+
+
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+
+body {
+  margin: 0;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #777;
+  text-align: left;
+  background-color: #FFF; }
+
+  html {
+  min-height: 100%; }
+
+body {
+  background-repeat: no-repeat;
+  min-height: 100%; 
+}
+
+ /* .messengers .btn .fa-network + span {
+    display: none; }*/
+/*  .messengers.links-num-1 .link:nth-of-type(1), .messengers.links-num-4 .link:nth-of-type(1), .messengers.links-num-7 .link:nth-of-type(1), .messengers.links-num-10 .link:nth-of-type(1), .messengers.links-num-1 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-10 .link:nth-of-type(2), .messengers.links-num-1 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-10 .link:nth-of-type(2), .messengers.links-num-1 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-10 .link:nth-of-type(2), .messengers.links-num-1 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-10 .link:nth-of-type(2) {
+    max-width: 100%; }
+    .messengers.links-num-1 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-4 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-7 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-10 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span {
+      display: inline-block; }
+  .messengers.links-num-2 .link:nth-of-type(1), .messengers.links-num-5 .link:nth-of-type(1), .messengers.links-num-8 .link:nth-of-type(1), .messengers.links-num-11 .link:nth-of-type(1), .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-11 .link:nth-of-type(2) {
+    max-width: 50%; }
+  .messengers .btn {
+    overflow: hidden;
+    vertical-align: middle; }
+    .messengers .btn .fa-network {
+      display: inline-block;
+      font-size: 2em;
+      margin-top: -0.25em;
+      margin-bottom: -0.25em; }
+    .messengers .btn .fa-network + span {
+      margin-left: 0.6em; }
+  .messengers .link {
+    display: inline-block;
+    width: 100%; }*/
+.container {
+  width: 100%;
+  padding-right: 0.62em;
+  padding-left: 0.62em;
+  margin-right: auto;
+  margin-left: auto; }
+  @media (min-width: 576px) {
+    .container {
+      max-width: 540px; } }
+  @media (min-width: 768px) {
+    .container {
+      max-width: 720px; } }
+
+ a 
+  {
+      color: inherit; 
+  }
+  a:hover
+  {
+      color: inherit; 
+  }
+    .social_links .link .fa-network {
+      width: 1em;
+      height: 1em; }
+
+[tabindex="-1"]:focus {
+  outline: 0 !important; }
+
+.buttons {
+  margin-bottom: 1em; }
+  .buttons .btn {
+    white-space: normal; }
+
+
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 2em;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+	}
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 2px solid transparent;
+  padding: 0.8rem 1.2rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 4px;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  display: block;
+  width: 100%; }
+
+
+  @media screen and (prefers-reduced-motion: reduce) {
+    .btn {
+      transition: none; } }
+  .btn:hover, .btn:focus {
+    text-decoration: none; }
+  .btn:focus, .btn.focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+  .btn.disabled, .btn:disabled {
+    opacity: 0.65; }
+  .btn:not(:disabled):not(.disabled) {
+    cursor: pointer; }
+  .btn:not(:disabled):not(.disabled):active, .btn:not(:disabled):not(.disabled).active {
+    background-image: none; }
