--- a/css/css.css
+++ b/css/css.css
@@ -1,16 +1,434 @@
 
 .galleryContainer{
-    width: 90%;
-    height: 302px;
-    max-width: 1000px;
+    width: 54%;
+    height: 240px;
+    max-width: 974px;
     margin: auto;
     user-select: none;
-    padding: 10px;
+    padding: 9px;
     box-sizing: border-box;
 }
+  .ultitle{
+      font-size: large; 
+      margin-left: 22px;
+    }
+
+      .imagetitle{
+      border-radius: 50%; 
+      width: 100px; 
+      height: 86px; 
+      margin-left: 118px;
+    }
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+    }
+
+  @media (max-width: 411px) 
+  { 
+    .galleryContainer 
+    {
+    width: 95%;
+    height: 223px;
+    max-width: 540px;
+    margin: auto;
+    margin-top: -21px;
+    margin-bottom: -16px;
+    user-select: none;
+    padding: 9px;
+    box-sizing: border-box;
+    } 
+  .imagetitle{
+      border-radius: 50%; 
+      width: 100px; 
+      height: 100px; 
+      margin-left: 48px;
+    }
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 71px;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+    }
+      .ultitle{
+      font-size: medium; 
+      margin-left: 9px;
+    }
+
+  }
+    @media (max-width: 412px) and (min-width: 412px) 
+  { 
+    .galleryContainer 
+    {
+    width: 95%;
+    height: 223px;
+    max-width: 540px;
+    margin: auto;
+    user-select: none;
+    padding: 9px;
+    box-sizing: border-box;
+    }
+      .ultitle{
+      font-size: medium; 
+      margin-left: 22px;
+    }
+      .imagetitle{
+      border-radius: 50%; 
+      width: 100px; 
+      height: 100px; 
+      margin-left: 51px;
+    } 
+
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 14px;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+    }
+
+  }
+
+   @media (max-width: 375px) 
+  { 
+      .ultitle{
+      font-size: small; 
+      margin-left: 22px;
+    }
+    .galleryContainer 
+    {
+    width: 98%;
+    height: 161px;
+    max-width: 540px;
+    margin: auto;
+    margin-top: -7px;
+    margin-bottom: -15px;
+    user-select: none;
+    padding: 9px;
+    box-sizing: border-box;
+    } 
+  .imagetitle{
+      border-radius: 50%; 
+      width: 93px; 
+      height: 87px; 
+      margin-left: 55px;
+    }
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 32px;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+    }
+
+  }
+
+@media (min-width: 576px) and (max-width: 767.98px) 
+{ 
+      .ultitle{
+      font-size: medium; 
+      margin-left: 22px;
+    }
+    .galleryContainer 
+    {
+    width: 88%;
+    height: 90px;
+    max-width: 540px;
+    margin: auto;
+    user-select: none;
+    padding: 9px;
+    box-sizing: border-box;
+    }
+  .imagetitle{
+      border-radius: 50%; 
+      width: 100px; 
+      height: 100px; 
+      margin-left: 15px;
+    }
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+    }
+ 
+ }
+
+@media (min-width: 768px) and (max-width: 991.98px)
+ { 
+    
+  .ultitle{
+      font-size: medium; 
+      margin-left: 22px;
+    }
+    .galleryContainer 
+    {
+    width: 88%;
+    height: 90px;
+    max-width: 540px;
+    margin: auto;
+    user-select: none;
+    padding: 9px;
+    box-sizing: border-box;
+    } 
+  .imagetitle{
+      border-radius: 50%; 
+      width: 100px; 
+      height: 100px; 
+      margin-left: 15px;
+    }
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+    }
+
+ }
+
+@media (min-width: 992px) and (max-width: 1199.98px) 
+{
+      .ultitle{
+      font-size: medium; 
+      margin-left: 22px;
+    }
+  .imagetitle{
+      border-radius: 50%; 
+      width: 100px; 
+      height: 100px; 
+      margin-left: 15px;
+    }
+    .galleryContainer 
+    {
+    width: 88%;
+    height: 90px;
+    max-width: 540px;
+    margin: auto;
+    user-select: none;
+    padding: 9px;
+    box-sizing: border-box;
+    }
+
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+    }
+ 
+ }
+ @media (min-height: 812px){
+     
+  .ultitle{
+      font-size: medium; 
+      margin-left: 22px;
+    }
+        .galleryContainer 
+    {
+    width: 95%;
+    height: 247px;
+    max-width: 540px;
+    margin: auto;
+    margin-top: -6px;
+    margin-bottom: -6px;
+    user-select: none;
+    padding: 9px;
+    box-sizing: border-box;
+    }
+  .imagetitle{
+      border-radius: 50%; 
+      width: 100px; 
+      height: 100px; 
+      margin-left: 63px;
+    }
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 85px;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+    }
+ 
+ }
+
+ @media (max-height: 736px) and (min-height: 736px;){
+      .ultitle{
+      font-size: medium; 
+      margin-left: 22px;
+    }
+
+        .galleryContainer 
+    {
+    width: 95%;
+    height: 253px;
+    max-width: 540px;
+    margin: auto;
+    user-select: none;
+    padding: 9px;
+    box-sizing: border-box;
+    }
+  .imagetitle{
+      border-radius: 50%; 
+      width: 100px; 
+      height: 100px; 
+      margin-left: 15px;
+    }
+.powered-omnilinks 
+{
+  text-align: center;
+  font-size: large;
+  margin-bottom: 85px;
+  position: relative;
+  z-index: 10;
+   }
+  .powered-omnilinks a 
+  {
+    color: inherit;
+    text-decoration: none; 
+}
+    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
+    {
+      color: inherit;
+      text-decoration: none; 
+  }
+  .powered-omnilinks .logo 
+  {
+    font-size: 1.2em; 
+    }
+ 
+ }
+
+
 .galleryContainer .slideShowContainer{
     width: 100%;
-    height: 100%;
+    height: 98%;
     overflow: hidden;
     background-color: gainsboro;
     position: relative;
@@ -111,13 +529,14 @@
     width: 100%;
     height: 10%;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 4px;
     box-sizing: border-box;
 }
 .galleryContainer #dotsContainer .dots{
     display: inline-block;
-    width: 15px;
-    height: 15px;
+    width: 6px;
+    margin-top: 3px;
+    height: 6px;
     border-radius: 50%;
     margin-left: 5px;
     background-color: #bbb;
@@ -128,7 +547,7 @@
     margin-left: 0;
 }
 .galleryContainer #dotsContainer .dots:hover,.galleryContainer #dotsContainer .dots.active{
-    background-color: #717171;;
+    background-color: #717171;
 }
 
 
