--- a/css/template.css
+++ b/css/template.css
@@ -255,29 +255,6 @@
   .buttons .btn {
     white-space: normal; }
 
-
-.powered-omnilinks 
-{
-  text-align: center;
-  font-size: large;
-  margin-bottom: 2em;
-  position: relative;
-  z-index: 10;
-   }
-  .powered-omnilinks a 
-  {
-    color: inherit;
-    text-decoration: none; 
-}
-    .powered-omnilinks a:hover, .powered-omnilinks a:active, .powered-omnilinks afocus 
-    {
-      color: inherit;
-      text-decoration: none; 
-  }
-  .powered-omnilinks .logo 
-  {
-    font-size: 1.2em; 
-	}
 .btn {
   display: inline-block;
   font-weight: 400;
@@ -286,7 +263,7 @@
   vertical-align: middle;
   user-select: none;
   border: 2px solid transparent;
-  padding: 0.8rem 1.2rem;
+  padding: 0.5rem 1.2rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 4px;
@@ -295,7 +272,7 @@
   width: 100%; }
 
 
-  @media screen and (prefers-reduced-motion: reduce) {
+/*  @media screen and (prefers-reduced-motion: reduce) {
     .btn {
       transition: none; } }
   .btn:hover, .btn:focus {
@@ -308,4 +285,4 @@
   .btn:not(:disabled):not(.disabled) {
     cursor: pointer; }
   .btn:not(:disabled):not(.disabled):active, .btn:not(:disabled):not(.disabled).active {
-    background-image: none; }
+    background-image: none; }*/
